# unopened_ai

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  config.toml  rustfmt.toml
archive/: bot_b.rs
src/: bot.rs  decoder.rs  main.rs  robot.rs  ui.rs  ux.rs
