[package]
name = "unopened_ai"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
tui = "0.19.0"
tokio = { version = "1.31.0", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
ratatui = "0.26.2"
